applications/apicurio-registry/deployment-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: apicurio-registry
    component: apicurio-registry-api
  name: apicurio-registry-api
spec:
  replicas: 1
  selector:
    matchLabels:
      component: apicurio-registry-api
  template:
    metadata:
      labels:
        app: apicurio-registry
        component: apicurio-registry-api
    spec:
      containers:
        - image: >-
            quay.io/apicurio/apicurio-registry@sha256:f17466a5b7120d9263a2e02fcf1074d9135b2581352c9bebd02017ab5e31be3b
          name: apicurio-registry-api
          ports:
            - name: web
              containerPort: 8080
              protocol: TCP
          env:
            - name: QUARKUS_OIDC_TENANT_ENABLED
              value: 'true'
            - name: QUARKUS_OIDC_AUTH_SERVER_URL
              value: 'https://sso.dev.apicur.io/realms/apicurio'
            - name: QUARKUS_OIDC_TOKEN_PATH
              value: >-
                https://sso.dev.apicur.io/realms/apicurio/protocol/openid-connect/token
            - name: QUARKUS_OIDC_CLIENT_ID
              value: registry-api
            - name: APICURIO_UI_AUTH_OIDC_CLIENT_ID
              value: registry-ui
            - name: APICURIO_UI_AUTH_OIDC_REDIRECT_URI
              value: 'https://registry.dev.apicur.io'
            - name: APICURIO_UI_AUTH_OIDC_LOGOUT-URL
              value: 'https://www.apicur.io/'
            - name: APICURIO_LOG_LEVEL
              value: DEBUG
            - name: LOG_LEVEL
              value: INFO
            - name: QUARKUS_PROFILE
              value: prod
            - name: APICURIO_REST_DELETION_GROUP_ENABLED
              value: 'true'
            - name: APICURIO_REST_DELETION_ARTIFACT_ENABLED
              value: 'true'
            - name: APICURIO_REST_DELETION_ARTIFACT-VERSION_ENABLED
              value: 'true'
            - name: APICURIO_REST_MUTABILITY_ARTIFACT-VERSION-CONTENT_ENABLED
              value: 'true'
            - name: QUARKUS_HTTP_CORS_ORIGINS
              value: '*'
            - name: APICURIO_STORAGE_KIND
              value: sql
            - name: APICURIO_STORAGE_SQL_KIND
              value: postgresql
            - name: APICURIO_AUTHN_BASIC_CLIENT_CREDENTIALS_ENABLED
              value: 'true'
            - name: APICURIO_AUTHN_BASIC_CLIENT_CREDENTIALS_CACHE_EXPIRATION
              value: '4'
            - name: APICURIO_DATABASE
              valueFrom:
                secretKeyRef:
                  name: rds-apicurio-registry-credentials
                  key: database
            - name: APICURIO_DATASOURCE_PORT
              valueFrom:
                secretKeyRef:
                  name: rds-apicurio-registry-credentials
                  key: port
            - name: APICURIO_DATASOURCE_HOST
              valueFrom:
                secretKeyRef:
                  name: rds-apicurio-registry-credentials
                  key: host
            - name: APICURIO_DATASOURCE_USERNAME
              valueFrom:
                secretKeyRef:
                  name: rds-apicurio-registry-credentials
                  key: user
            - name: APICURIO_DATASOURCE_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: rds-apicurio-registry-credentials
                  key: password
            - name: APICURIO_DATASOURCE_URL
              value: >-
                jdbc:postgresql://${APICURIO_DATASOURCE_HOST}:${APICURIO_DATASOURCE_PORT}/${APICURIO_DATABASE}
          resources:
            limits:
              cpu: 500m
              memory: 1000Mi
            requests:
              cpu: 200m
              memory: 400Mi
