applications/apicurio-registry/psql-client.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: pg-client
  labels:
    app.kubernetes.io/component: pg-client
    app: pg-client
spec:
  containers:
    - image: bitnami/postgresql:12.15.0-debian-11-r72
      name: postgresql
      resources:
        limits:
          cpu: 200m
          memory: 200Mi
        requests:
          cpu: 100m
          memory: 100Mi
